# OOR-on-edge

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_x64  README.md  config.yml  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  oor-on-edge.sh  pyproject.toml  requirements_on_edge.txt
cicd/: build-pipeline.yml  deploy-pipeline.yml  main.yml  prebuild-pipeline.yml
cicd/templates/: code-quality-security-checks.yml  download-aml-model.yml
oor_on_edge/: metadata.py  utils.py
oor_on_edge/data_delivery_pipeline/: run_data_delivery_pipeline.py
oor_on_edge/data_delivery_pipeline/components/: data_delivery.py  iot_handler.py
oor_on_edge/detection_pipeline/: run_detection_pipeline.py
oor_on_edge/detection_pipeline/components/: data_detection.py  input_image.py  metadata.py  model_result.py
oor_on_edge/model_conversion_pipeline/: run_model_conversion_pipeline.py
oor_on_edge/performance_monitoring/: run_performance_monitoring.py
oor_on_edge/settings/: settings.py  settings_schema.py
