[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oor_on_edge"
dynamic = ["version"]
description = "OOR on-edge is about on-edge recognition of objects from public space images."
authors = [
    {name = "Sebastian Davrieux", email = "s.davrieux@amsterdam.nl"},
    {name = "Diana Epureanu", email = "d.epureanu@amsterdam.nl"},
    {name = "Andrea Lombardo", email = "a.lombardo@amsterdam.nl"},
    {name = "Daan Bloembergen", email = "d.bloembergen@amsterdam.nl"},
]
maintainers = [
    { name = "Computer Vision Team, Gemeente Amsterdam", email = "cvt@amsterdam.nl" },
]
readme = "README.md"
requires-python = ">=3.8, <=3.12"
dependencies = [
    "aml_interface",
    "azure-iot-device>=2.13",
    "cvtoolkit",
    "numpy>=1.24.2",
    "opencv-python>=4.6.0",
    "ultralytics>=8.3",
]

[tool.uv.sources]
aml_interface = { git = "https://github.com/Computer-Vision-Team-Amsterdam/AML-Interface.git", tag = "v1.1.4" }
cvtoolkit = { git = "https://github.com/Computer-Vision-Team-Amsterdam/CVToolkit.git", tag = "v2.0.7" }

[project.optional-dependencies]
dev = [
    "pre-commit>=3.2.0",
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
    "safety>=3.2.4",
]

[tool.setuptools.dynamic]
version = {attr = "oor_on_edge.__version__"}

[tool.setuptools.packages.find]
include=["oor_on_edge", "oor_on_edge.*"]

[tool.isort]
profile = "black"
multi_line_output = 3
